y.output
Terminaux inutilisés dans la grammaire

   tCONST
   tNOM


Grammaire

    0 $accept: start $end

    1 start: Fonctions

    2 Fonctions: Fonction Fonctions
    3          | Fonction

    4 $@1: %empty

    5 Fonction: Type tID $@1 tPARO Arguments tPARF BodyFonction

    6 Type: tINT
    7     | tVOID

    8 Arguments: Argument tVIRGULE Arguments
    9          | Argument
   10          | %empty

   11 Argument: tINT tID

   12 BodyFonction: tACCO Declarations Actions tACCF
   13             | tACCO Declarations Actions tRETURN Calcul tPV tACCF

   14 Declarations: %empty
   15             | Declaration Declarations

   16 Declaration: tINT tID tPV

   17 Actions: Action Actions
   18        | %empty

   19 Action: Affectation
   20       | BlocIf
   21       | BlocWhile
   22       | AppelFonction
   23       | Printf

   24 Affectation: tID tAFFECT Calcul tPV

   25 Calcul: Grandeur
   26       | Calcul tPLUS Calcul
   27       | Calcul tMULT Calcul
   28       | Calcul tMOINS Calcul
   29       | Calcul tDIV Calcul
   30       | AppelFonction
   31       | Parentheses

   32 Parentheses: tPARO Calcul tPARF

   33 Grandeur: tNB
   34         | tID

   35 $@2: %empty

   36 $@3: %empty

   37 BlocWhile: tWHILE tPARO $@2 Condition tPARF $@3 Body

   38 action_if: %empty

   39 BlocIf: tIF tPARO Condition tPARF action_if Body

   40 $@4: %empty

   41 BlocIf: tIF tPARO Condition tPARF action_if Body $@4 Else

   42 Else: tELSE BlocIf
   43     | tELSE Body

   44 $@5: %empty

   45 Body: tACCO $@5 Actions tACCF

   46 Condition: Cond
   47          | tNOT Cond

   48 Cond: Calcul tSUPEGAL Calcul
   49     | Calcul tINFEGAL Calcul
   50     | Calcul tSUP Calcul
   51     | Calcul tINF Calcul
   52     | Calcul tDIFF Calcul
   53     | Calcul tEGAL Calcul
   54     | Calcul

   55 AppelFonction: tID tPARO Args tPARF tPV

   56 Args: Calcul tVIRGULE Args
   57     | Calcul
   58     | %empty

   59 Printf: tPRINTF tPARO Calcul tPARF tPV


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tACCO (258) 12 13 45
tACCF (259) 12 13 45
tCONST (260)
tPARO (261) 5 32 37 39 41 55 59
tPARF (262) 5 32 37 39 41 55 59
tINT (263) 6 11 16
tPRINTF (264) 59
tWHILE (265) 37
tIF (266) 39 41
tPLUS (267) 26
tMULT (268) 27
tMOINS (269) 28
tDIV (270) 29
tAFFECT (271) 24
tSUPEGAL (272) 48
tINFEGAL (273) 49
tSUP (274) 50
tINF (275) 51
tDIFF (276) 52
tEGAL (277) 53
tNOT (278) 47
tVIRGULE (279) 8 56
tRETURN (280) 13
tNB (281) 33
tNOM (282)
tPV (283) 13 16 24 55 59
tVOID (284) 7
tID (285) 5 11 16 24 34 55
tELSE (286) 42 43
tIFX (287)


Non-terminaux, suivis des règles où ils apparaissent

$accept (33)
    à gauche: 0
start (34)
    à gauche: 1, à droite: 0
Fonctions (35)
    à gauche: 2 3, à droite: 1 2
Fonction (36)
    à gauche: 5, à droite: 2 3
$@1 (37)
    à gauche: 4, à droite: 5
Type (38)
    à gauche: 6 7, à droite: 5
Arguments (39)
    à gauche: 8 9 10, à droite: 5 8
Argument (40)
    à gauche: 11, à droite: 8 9
BodyFonction (41)
    à gauche: 12 13, à droite: 5
Declarations (42)
    à gauche: 14 15, à droite: 12 13 15
Declaration (43)
    à gauche: 16, à droite: 15
Actions (44)
    à gauche: 17 18, à droite: 12 13 17 45
Action (45)
    à gauche: 19 20 21 22 23, à droite: 17
Affectation (46)
    à gauche: 24, à droite: 19
Calcul (47)
    à gauche: 25 26 27 28 29 30 31, à droite: 13 24 26 27 28 29 32
    48 49 50 51 52 53 54 56 57 59
Parentheses (48)
    à gauche: 32, à droite: 31
Grandeur (49)
    à gauche: 33 34, à droite: 25
BlocWhile (50)
    à gauche: 37, à droite: 21
$@2 (51)
    à gauche: 35, à droite: 37
$@3 (52)
    à gauche: 36, à droite: 37
action_if (53)
    à gauche: 38, à droite: 39 41
BlocIf (54)
    à gauche: 39 41, à droite: 20 42
$@4 (55)
    à gauche: 40, à droite: 41
Else (56)
    à gauche: 42 43, à droite: 41
Body (57)
    à gauche: 45, à droite: 37 39 41 43
$@5 (58)
    à gauche: 44, à droite: 45
Condition (59)
    à gauche: 46 47, à droite: 37 39 41
Cond (60)
    à gauche: 48 49 50 51 52 53 54, à droite: 46 47
AppelFonction (61)
    à gauche: 55, à droite: 22 30
Args (62)
    à gauche: 56 57 58, à droite: 55 56
Printf (63)
    à gauche: 59, à droite: 23


État 0

    0 $accept: . start $end

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    start      aller à l'état 3
    Fonctions  aller à l'état 4
    Fonction   aller à l'état 5
    Type       aller à l'état 6


État 1

    6 Type: tINT .

    $défaut  réduction par utilisation de la règle 6 (Type)


État 2

    7 Type: tVOID .

    $défaut  réduction par utilisation de la règle 7 (Type)


État 3

    0 $accept: start . $end

    $end  décalage et aller à l'état 7


État 4

    1 start: Fonctions .

    $défaut  réduction par utilisation de la règle 1 (start)


État 5

    2 Fonctions: Fonction . Fonctions
    3          | Fonction .

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 3 (Fonctions)

    Fonctions  aller à l'état 8
    Fonction   aller à l'état 5
    Type       aller à l'état 6


État 6

    5 Fonction: Type . tID $@1 tPARO Arguments tPARF BodyFonction

    tID  décalage et aller à l'état 9


État 7

    0 $accept: start $end .

    $défaut  accepter


État 8

    2 Fonctions: Fonction Fonctions .

    $défaut  réduction par utilisation de la règle 2 (Fonctions)


État 9

    5 Fonction: Type tID . $@1 tPARO Arguments tPARF BodyFonction

    $défaut  réduction par utilisation de la règle 4 ($@1)

    $@1  aller à l'état 10


État 10

    5 Fonction: Type tID $@1 . tPARO Arguments tPARF BodyFonction

    tPARO  décalage et aller à l'état 11


État 11

    5 Fonction: Type tID $@1 tPARO . Arguments tPARF BodyFonction

    tINT  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 10 (Arguments)

    Arguments  aller à l'état 13
    Argument   aller à l'état 14


État 12

   11 Argument: tINT . tID

    tID  décalage et aller à l'état 15


État 13

    5 Fonction: Type tID $@1 tPARO Arguments . tPARF BodyFonction

    tPARF  décalage et aller à l'état 16


État 14

    8 Arguments: Argument . tVIRGULE Arguments
    9          | Argument .

    tVIRGULE  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 9 (Arguments)


État 15

   11 Argument: tINT tID .

    $défaut  réduction par utilisation de la règle 11 (Argument)


État 16

    5 Fonction: Type tID $@1 tPARO Arguments tPARF . BodyFonction

    tACCO  décalage et aller à l'état 18

    BodyFonction  aller à l'état 19


État 17

    8 Arguments: Argument tVIRGULE . Arguments

    tINT  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 10 (Arguments)

    Arguments  aller à l'état 20
    Argument   aller à l'état 14


État 18

   12 BodyFonction: tACCO . Declarations Actions tACCF
   13             | tACCO . Declarations Actions tRETURN Calcul tPV tACCF

    tINT  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 14 (Declarations)

    Declarations  aller à l'état 22
    Declaration   aller à l'état 23


État 19

    5 Fonction: Type tID $@1 tPARO Arguments tPARF BodyFonction .

    $défaut  réduction par utilisation de la règle 5 (Fonction)


État 20

    8 Arguments: Argument tVIRGULE Arguments .

    $défaut  réduction par utilisation de la règle 8 (Arguments)


État 21

   16 Declaration: tINT . tID tPV

    tID  décalage et aller à l'état 24


État 22

   12 BodyFonction: tACCO Declarations . Actions tACCF
   13             | tACCO Declarations . Actions tRETURN Calcul tPV tACCF

    tPRINTF  décalage et aller à l'état 25
    tWHILE   décalage et aller à l'état 26
    tIF      décalage et aller à l'état 27
    tID      décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 18 (Actions)

    Actions        aller à l'état 29
    Action         aller à l'état 30
    Affectation    aller à l'état 31
    BlocWhile      aller à l'état 32
    BlocIf         aller à l'état 33
    AppelFonction  aller à l'état 34
    Printf         aller à l'état 35


État 23

   15 Declarations: Declaration . Declarations

    tINT  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 14 (Declarations)

    Declarations  aller à l'état 36
    Declaration   aller à l'état 23


État 24

   16 Declaration: tINT tID . tPV

    tPV  décalage et aller à l'état 37


État 25

   59 Printf: tPRINTF . tPARO Calcul tPARF tPV

    tPARO  décalage et aller à l'état 38


État 26

   37 BlocWhile: tWHILE . tPARO $@2 Condition tPARF $@3 Body

    tPARO  décalage et aller à l'état 39


État 27

   39 BlocIf: tIF . tPARO Condition tPARF action_if Body
   41       | tIF . tPARO Condition tPARF action_if Body $@4 Else

    tPARO  décalage et aller à l'état 40


État 28

   24 Affectation: tID . tAFFECT Calcul tPV
   55 AppelFonction: tID . tPARO Args tPARF tPV

    tPARO    décalage et aller à l'état 41
    tAFFECT  décalage et aller à l'état 42


État 29

   12 BodyFonction: tACCO Declarations Actions . tACCF
   13             | tACCO Declarations Actions . tRETURN Calcul tPV tACCF

    tACCF    décalage et aller à l'état 43
    tRETURN  décalage et aller à l'état 44


État 30

   17 Actions: Action . Actions

    tPRINTF  décalage et aller à l'état 25
    tWHILE   décalage et aller à l'état 26
    tIF      décalage et aller à l'état 27
    tID      décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 18 (Actions)

    Actions        aller à l'état 45
    Action         aller à l'état 30
    Affectation    aller à l'état 31
    BlocWhile      aller à l'état 32
    BlocIf         aller à l'état 33
    AppelFonction  aller à l'état 34
    Printf         aller à l'état 35


État 31

   19 Action: Affectation .

    $défaut  réduction par utilisation de la règle 19 (Action)


État 32

   21 Action: BlocWhile .

    $défaut  réduction par utilisation de la règle 21 (Action)


État 33

   20 Action: BlocIf .

    $défaut  réduction par utilisation de la règle 20 (Action)


État 34

   22 Action: AppelFonction .

    $défaut  réduction par utilisation de la règle 22 (Action)


État 35

   23 Action: Printf .

    $défaut  réduction par utilisation de la règle 23 (Action)


État 36

   15 Declarations: Declaration Declarations .

    $défaut  réduction par utilisation de la règle 15 (Declarations)


État 37

   16 Declaration: tINT tID tPV .

    $défaut  réduction par utilisation de la règle 16 (Declaration)


État 38

   59 Printf: tPRINTF tPARO . Calcul tPARF tPV

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 49
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 39

   37 BlocWhile: tWHILE tPARO . $@2 Condition tPARF $@3 Body

    $défaut  réduction par utilisation de la règle 35 ($@2)

    $@2  aller à l'état 53


État 40

   39 BlocIf: tIF tPARO . Condition tPARF action_if Body
   41       | tIF tPARO . Condition tPARF action_if Body $@4 Else

    tPARO  décalage et aller à l'état 46
    tNOT   décalage et aller à l'état 54
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 55
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    Condition      aller à l'état 56
    Cond           aller à l'état 57
    AppelFonction  aller à l'état 52


État 41

   55 AppelFonction: tID tPARO . Args tPARF tPV

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 58 (Args)

    Calcul         aller à l'état 58
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52
    Args           aller à l'état 59


État 42

   24 Affectation: tID tAFFECT . Calcul tPV

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 60
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 43

   12 BodyFonction: tACCO Declarations Actions tACCF .

    $défaut  réduction par utilisation de la règle 12 (BodyFonction)


État 44

   13 BodyFonction: tACCO Declarations Actions tRETURN . Calcul tPV tACCF

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 61
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 45

   17 Actions: Action Actions .

    $défaut  réduction par utilisation de la règle 17 (Actions)


État 46

   32 Parentheses: tPARO . Calcul tPARF

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 62
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 47

   33 Grandeur: tNB .

    $défaut  réduction par utilisation de la règle 33 (Grandeur)


État 48

   34 Grandeur: tID .
   55 AppelFonction: tID . tPARO Args tPARF tPV

    tPARO  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 34 (Grandeur)


État 49

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   59 Printf: tPRINTF tPARO Calcul . tPARF tPV

    tPARF   décalage et aller à l'état 63
    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67


État 50

   31 Calcul: Parentheses .

    $défaut  réduction par utilisation de la règle 31 (Calcul)


État 51

   25 Calcul: Grandeur .

    $défaut  réduction par utilisation de la règle 25 (Calcul)


État 52

   30 Calcul: AppelFonction .

    $défaut  réduction par utilisation de la règle 30 (Calcul)


État 53

   37 BlocWhile: tWHILE tPARO $@2 . Condition tPARF $@3 Body

    tPARO  décalage et aller à l'état 46
    tNOT   décalage et aller à l'état 54
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 55
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    Condition      aller à l'état 68
    Cond           aller à l'état 57
    AppelFonction  aller à l'état 52


État 54

   47 Condition: tNOT . Cond

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 55
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    Cond           aller à l'état 69
    AppelFonction  aller à l'état 52


État 55

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   48 Cond: Calcul . tSUPEGAL Calcul
   49     | Calcul . tINFEGAL Calcul
   50     | Calcul . tSUP Calcul
   51     | Calcul . tINF Calcul
   52     | Calcul . tDIFF Calcul
   53     | Calcul . tEGAL Calcul
   54     | Calcul .

    tPLUS     décalage et aller à l'état 64
    tMULT     décalage et aller à l'état 65
    tMOINS    décalage et aller à l'état 66
    tDIV      décalage et aller à l'état 67
    tSUPEGAL  décalage et aller à l'état 70
    tINFEGAL  décalage et aller à l'état 71
    tSUP      décalage et aller à l'état 72
    tINF      décalage et aller à l'état 73
    tDIFF     décalage et aller à l'état 74
    tEGAL     décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 54 (Cond)


État 56

   39 BlocIf: tIF tPARO Condition . tPARF action_if Body
   41       | tIF tPARO Condition . tPARF action_if Body $@4 Else

    tPARF  décalage et aller à l'état 76


État 57

   46 Condition: Cond .

    $défaut  réduction par utilisation de la règle 46 (Condition)


État 58

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   56 Args: Calcul . tVIRGULE Args
   57     | Calcul .

    tPLUS     décalage et aller à l'état 64
    tMULT     décalage et aller à l'état 65
    tMOINS    décalage et aller à l'état 66
    tDIV      décalage et aller à l'état 67
    tVIRGULE  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 57 (Args)


État 59

   55 AppelFonction: tID tPARO Args . tPARF tPV

    tPARF  décalage et aller à l'état 78


État 60

   24 Affectation: tID tAFFECT Calcul . tPV
   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul

    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67
    tPV     décalage et aller à l'état 79


État 61

   13 BodyFonction: tACCO Declarations Actions tRETURN Calcul . tPV tACCF
   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul

    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67
    tPV     décalage et aller à l'état 80


État 62

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   32 Parentheses: tPARO Calcul . tPARF

    tPARF   décalage et aller à l'état 81
    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67


État 63

   59 Printf: tPRINTF tPARO Calcul tPARF . tPV

    tPV  décalage et aller à l'état 82


État 64

   26 Calcul: Calcul tPLUS . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 83
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 65

   27 Calcul: Calcul tMULT . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 84
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 66

   28 Calcul: Calcul tMOINS . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 85
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 67

   29 Calcul: Calcul tDIV . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 86
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 68

   37 BlocWhile: tWHILE tPARO $@2 Condition . tPARF $@3 Body

    tPARF  décalage et aller à l'état 87


État 69

   47 Condition: tNOT Cond .

    $défaut  réduction par utilisation de la règle 47 (Condition)


État 70

   48 Cond: Calcul tSUPEGAL . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 88
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 71

   49 Cond: Calcul tINFEGAL . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 89
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 72

   50 Cond: Calcul tSUP . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 90
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 73

   51 Cond: Calcul tINF . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 91
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 74

   52 Cond: Calcul tDIFF . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 92
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 75

   53 Cond: Calcul tEGAL . Calcul

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    Calcul         aller à l'état 93
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52


État 76

   39 BlocIf: tIF tPARO Condition tPARF . action_if Body
   41       | tIF tPARO Condition tPARF . action_if Body $@4 Else

    $défaut  réduction par utilisation de la règle 38 (action_if)

    action_if  aller à l'état 94


État 77

   56 Args: Calcul tVIRGULE . Args

    tPARO  décalage et aller à l'état 46
    tNB    décalage et aller à l'état 47
    tID    décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 58 (Args)

    Calcul         aller à l'état 58
    Parentheses    aller à l'état 50
    Grandeur       aller à l'état 51
    AppelFonction  aller à l'état 52
    Args           aller à l'état 95


État 78

   55 AppelFonction: tID tPARO Args tPARF . tPV

    tPV  décalage et aller à l'état 96


État 79

   24 Affectation: tID tAFFECT Calcul tPV .

    $défaut  réduction par utilisation de la règle 24 (Affectation)


État 80

   13 BodyFonction: tACCO Declarations Actions tRETURN Calcul tPV . tACCF

    tACCF  décalage et aller à l'état 97


État 81

   32 Parentheses: tPARO Calcul tPARF .

    $défaut  réduction par utilisation de la règle 32 (Parentheses)


État 82

   59 Printf: tPRINTF tPARO Calcul tPARF tPV .

    $défaut  réduction par utilisation de la règle 59 (Printf)


État 83

   26 Calcul: Calcul . tPLUS Calcul
   26       | Calcul tPLUS Calcul .
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul

    tMULT  décalage et aller à l'état 65
    tDIV   décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 26 (Calcul)


État 84

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   27       | Calcul tMULT Calcul .
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul

    $défaut  réduction par utilisation de la règle 27 (Calcul)


État 85

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   28       | Calcul tMOINS Calcul .
   29       | Calcul . tDIV Calcul

    tMULT  décalage et aller à l'état 65
    tDIV   décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 28 (Calcul)


État 86

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   29       | Calcul tDIV Calcul .

    $défaut  réduction par utilisation de la règle 29 (Calcul)


État 87

   37 BlocWhile: tWHILE tPARO $@2 Condition tPARF . $@3 Body

    $défaut  réduction par utilisation de la règle 36 ($@3)

    $@3  aller à l'état 98


État 88

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   48 Cond: Calcul tSUPEGAL Calcul .

    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 48 (Cond)


État 89

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   49 Cond: Calcul tINFEGAL Calcul .

    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 49 (Cond)


État 90

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   50 Cond: Calcul tSUP Calcul .

    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 50 (Cond)


État 91

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   51 Cond: Calcul tINF Calcul .

    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 51 (Cond)


État 92

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   52 Cond: Calcul tDIFF Calcul .

    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 52 (Cond)


État 93

   26 Calcul: Calcul . tPLUS Calcul
   27       | Calcul . tMULT Calcul
   28       | Calcul . tMOINS Calcul
   29       | Calcul . tDIV Calcul
   53 Cond: Calcul tEGAL Calcul .

    tPLUS   décalage et aller à l'état 64
    tMULT   décalage et aller à l'état 65
    tMOINS  décalage et aller à l'état 66
    tDIV    décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 53 (Cond)


État 94

   39 BlocIf: tIF tPARO Condition tPARF action_if . Body
   41       | tIF tPARO Condition tPARF action_if . Body $@4 Else

    tACCO  décalage et aller à l'état 99

    Body  aller à l'état 100


État 95

   56 Args: Calcul tVIRGULE Args .

    $défaut  réduction par utilisation de la règle 56 (Args)


État 96

   55 AppelFonction: tID tPARO Args tPARF tPV .

    $défaut  réduction par utilisation de la règle 55 (AppelFonction)


État 97

   13 BodyFonction: tACCO Declarations Actions tRETURN Calcul tPV tACCF .

    $défaut  réduction par utilisation de la règle 13 (BodyFonction)


État 98

   37 BlocWhile: tWHILE tPARO $@2 Condition tPARF $@3 . Body

    tACCO  décalage et aller à l'état 99

    Body  aller à l'état 101


État 99

   45 Body: tACCO . $@5 Actions tACCF

    $défaut  réduction par utilisation de la règle 44 ($@5)

    $@5  aller à l'état 102


État 100

   39 BlocIf: tIF tPARO Condition tPARF action_if Body .
   41       | tIF tPARO Condition tPARF action_if Body . $@4 Else

    tELSE     réduction par utilisation de la règle 40 ($@4)
    $défaut  réduction par utilisation de la règle 39 (BlocIf)

    $@4  aller à l'état 103


État 101

   37 BlocWhile: tWHILE tPARO $@2 Condition tPARF $@3 Body .

    $défaut  réduction par utilisation de la règle 37 (BlocWhile)


État 102

   45 Body: tACCO $@5 . Actions tACCF

    tPRINTF  décalage et aller à l'état 25
    tWHILE   décalage et aller à l'état 26
    tIF      décalage et aller à l'état 27
    tID      décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 18 (Actions)
